# SuperBin

./: .gitignore  Cargo.toml  README.md  build.rs  package.json
.github/workflows/: dev.yml  main.yml
src/: app.html  ds.rgba  global.css  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/lib/: types.ts
src/lib/components/analytics/: AnalyticsTab.svelte
src/lib/components/cleanup/: CleanupTab.svelte  FileItem.svelte  RecycleSettings.svelte
src/lib/components/core/: Header.svelte  ProgressBar.svelte  Sidebar.svelte  StatsCard.svelte
src/lib/components/dashboard/: DiskUsage.svelte  StatsGrid.svelte
src/lib/stores/: diskStore.ts  uiStore.ts
src/routes/: +layout.svelte  +page.svelte
