[package]
name = "minibin"
version = "0.1.0"
edition = "2024"

[dependencies]
dirs = "6.0.0"
tray-item = "0.10.0"
winapi = { version = "0.3.9", features = ["shellapi"] }
wio = "0.2.2"
open = "5"
tray-icon = "0.20.1"
winit = "0.30"
image = "0.25"
winreg = "0.55.0"

[build-dependencies]
embed-resource = "3"
