[package]
name = "superbin"
version = "0.1.1"
authors = ["Terrax Development"]
description = "Мощная утилита по оптимизации работы с системой"
edition = "2024"
license = "MIT"    # Укажите лицензию (MIT/Apache-2.0 и т.д.)
repository = "https://github.com/belurgas/SuperBin"

[profile.release]
opt-level = 'z'        # максимальная оптимизация по размеру
lto = true             # Link Time Optimization
codegen-units = 1      # уменьшает размер за счёт времени сборки
panic = 'abort'        # отказ от стандартного обработчика паник
incremental = false    # отключает инкрементальную сборку
strip = "symbols" # или "debuginfo" для минимального strip

[dependencies]
winapi = { version = "0.3.9", features = ["shellapi", "winerror", "winuser", "wincon"] }
wio = "0.2.2"
tray-icon = "0.20.1"
winit = "0.30.11"
ico = "0.4"
winreg = "0.55.0"

[build-dependencies]
winres = "0.1"